@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.19_01-dev
 
+tweak Apache::RegistryNG so it works with virtual includes, thanks to
+Vivek Khera for the spot
+
 modules/eperl,embperl removed from 'make test'
 
 change Apache::File->tmpfile flags from O_WRONLY to O_RDWR
